# HomeWork1-Apriorit

./: .gitignore  CMakeLists.txt  FileProperties.h  README.md  ReportPrinterType.h  main.cpp
ReportPrinter/: CMakeLists.txt
ReportPrinter/Factory/: ReportPrinterFactory.cpp  ReportPrinterFactory.h
ReportPrinter/Printers/CsvReportPrinter/: CMakeLists.txt  CsvReportPrinter.cpp  CsvReportPrinter.h
ReportPrinter/Printers/TextReportPrinter/: CMakeLists.txt  TextReportPrinter.cpp  TextReportPrinter.h
ReportPrinter/Printers/VirtualReportPrinter/: CMakeLists.txt  VirtualReportPrinter.cpp  VirtualReportPrinter.h
ReportPrinter/Printers/XmlReportPrinter/: CMakeLists.txt  XmlReportPrinter.cpp  XmlReportPrinter.h
ReportPrinterFactory/: CMakeLists.txt  ReportPrinterFactory.cpp  ReportPrinterFactory.h
ReportPrinterFactory/Printers/CsvReportPrinter/: CMakeLists.txt  CsvReportPrinter.cpp  CsvReportPrinter.h
ReportPrinterFactory/Printers/TextReportPrinter/: TextReportPrinter.cpp  TextReportPrinter.h
ReportPrinterFactory/Printers/VirtualReportPrinter/: CMakeLists.txt  VirtualReportPrinter.cpp  VirtualReportPrinter.h
ReportPrinterFactory/Printers/XmlReportPrinter/: CMakeLists.txt  XmlReportPrinter.cpp  XmlReportPrinter.h
Utilities/: CMakeLists.txt  DirectoryFilesInfoFetcher.cpp  DirectoryFilesInfoFetcher.h
